// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <Networks /> without throwing 1`] = `
.c1 {
  margin-bottom: 0.375rem;
}

.c4 {
  margin-bottom: 1.125rem;
}

.c5 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c0 {
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
  width: 100%;
  max-width: 62.5rem;
  padding-bottom: 1.125rem;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c6 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c6 + p,
.c6 + small,
.c6 + h1,
.c6 + h2,
.c6 + label,
.c6 + h3,
.c6 + h4,
.c6 + h5,
.c6 + div,
.c6 + span {
  margin-top: 1.5rem;
}

@media only screen and (min-width:48em) {
  .c0 {
    width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c0 {
    width: 56rem;
  }
}

@media only screen and (min-width:75em) {
  .c0 {
    width: 59rem;
  }
}

@media only screen and (max-width:47.9375rem) {
  .c0 {
    padding-left: 0.375rem;
    padding-right: 0.375rem;
  }
}

@media only screen and (min-width:0em) {
  .c3 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c3 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            Use predefined or customized fabric networks which can be public-facing or private. All fabrics are isolated from other customers giving you complete control over the network environment. Read more on fabrics.
             
            <a
              href="https://docs.joyent.com/public-cloud/network/sdn"
              target="__blank"
            >
              Read more
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
  <h3
    className="c6"
  >
    Networks attached to this instance
  </h3>
</div>
`;

exports[`renders <Networks error /> without throwing 1`] = `
.c1 {
  margin-bottom: 0.375rem;
}

.c4 {
  margin-bottom: 1.125rem;
}

.c7 {
  margin-bottom: 1.5rem;
}

.c5 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c12 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
  line-height: 0.875rem;
  font-size: 0.8125rem;
}

.c0 {
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
  width: 100%;
  max-width: 62.5rem;
  padding-bottom: 1.125rem;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c6 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c6 + p,
.c6 + small,
.c6 + h1,
.c6 + h2,
.c6 + label,
.c6 + h3,
.c6 + h4,
.c6 + h5,
.c6 + div,
.c6 + span {
  margin-top: 1.5rem;
}

.c11 {
  color: rgba(73,73,73,1);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  background-color: rgb(255,255,255);
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
  border: 0.0625rem solid rgb(216,216,216);
  border-radius: 0.1875rem;
  width: 100%;
}

.c9 {
  border-radius: 0.1875rem 0 0 0.1875rem;
  margin: -0.0625rem 0 -0.0625rem -0.0625rem;
  min-width: 0.75rem;
  min-height: 100%;
  background-color: rgb(0,152,88);
  background-color: rgb(210,67,58);
}

.c10 {
  padding: 1.125rem 1.125rem;
}

@media only screen and (min-width:48em) {
  .c0 {
    width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c0 {
    width: 56rem;
  }
}

@media only screen and (min-width:75em) {
  .c0 {
    width: 59rem;
  }
}

@media only screen and (max-width:47.9375rem) {
  .c0 {
    padding-left: 0.375rem;
    padding-right: 0.375rem;
  }
}

@media only screen and (min-width:0em) {
  .c3 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c3 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            Use predefined or customized fabric networks which can be public-facing or private. All fabrics are isolated from other customers giving you complete control over the network environment. Read more on fabrics.
             
            <a
              href="https://docs.joyent.com/public-cloud/network/sdn"
              target="__blank"
            >
              Read more
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
  <h3
    className="c6"
  >
    Networks attached to this instance
  </h3>
  <div
    className="c7"
  >
    <div
      className="c8"
    >
      <div
        className="c9"
      />
      <div
        className="c10"
      >
        <h4
          className="c11"
        >
          Ooops!
        </h4>
        <p
          className="c12"
        >
          An error occurred while loading your networks
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders <Networks loading /> without throwing 1`] = `
.c1 {
  margin-bottom: 0.375rem;
}

.c4 {
  margin-bottom: 1.125rem;
}

.c8 {
  fill: rgb(59,70,204);
  stroke: rgb(59,70,204);
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
}

.c9 {
  fill: rgb(59,70,204);
  stroke: rgb(59,70,204);
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
  -webkit-animation-delay: 0.5s;
  animation-delay: 0.5s;
}

.c10 {
  fill: rgb(59,70,204);
  stroke: rgb(59,70,204);
  -webkit-animation: iCqDak 1.5s ease-out 0s infinite;
  animation: iCqDak 1.5s ease-out 0s infinite;
  -webkit-animation-delay: 1s;
  animation-delay: 1s;
}

.c5 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c11 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  text-align: center;
  margin-bottom: 0;
  margin-left: 0.375rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 1.25rem;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c0 {
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
  width: 100%;
  max-width: 62.5rem;
  padding-bottom: 1.125rem;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c6 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c6 + p,
.c6 + small,
.c6 + h1,
.c6 + h2,
.c6 + label,
.c6 + h3,
.c6 + h4,
.c6 + h5,
.c6 + div,
.c6 + span {
  margin-top: 1.5rem;
}

@media only screen and (min-width:48em) {
  .c0 {
    width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c0 {
    width: 56rem;
  }
}

@media only screen and (min-width:75em) {
  .c0 {
    width: 59rem;
  }
}

@media only screen and (max-width:47.9375rem) {
  .c0 {
    padding-left: 0.375rem;
    padding-right: 0.375rem;
  }
}

@media only screen and (min-width:0em) {
  .c3 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c3 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            Use predefined or customized fabric networks which can be public-facing or private. All fabrics are isolated from other customers giving you complete control over the network environment. Read more on fabrics.
             
            <a
              href="https://docs.joyent.com/public-cloud/network/sdn"
              target="__blank"
            >
              Read more
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
  <h3
    className="c6"
  >
    Networks attached to this instance
  </h3>
  <div
    className="c7"
  >
    <svg
      height="10"
      width="28"
    >
      <rect
        className="c8"
        height="6"
        width="6"
        x="2"
        y="2"
      />
      <rect
        className="c9"
        height="6"
        width="6"
        x="11"
        y="2"
      />
      <rect
        className="c10"
        height="6"
        width="6"
        x="20"
        y="2"
      />
    </svg>
    <p
      className="c11"
    >
      Loading...
    </p>
  </div>
</div>
`;

exports[`renders <Networks networks /> without throwing 1`] = `
.c1 {
  margin-bottom: 0.375rem;
}

.c4 {
  margin-bottom: 1.125rem;
}

.c7 {
  margin-bottom: 1.5rem;
}

.c16 {
  margin-right: 1.5rem;
}

.c19 {
  margin-right: 0.375rem;
}

.c20 {
  margin-top: 1.125rem;
}

.c11 {
  padding-right: 1.125rem;
  padding-left: 1.125rem;
}

.c14 {
  padding: 1.5rem;
}

.c5 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c0 {
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
  width: 100%;
  max-width: 62.5rem;
  padding-bottom: 1.125rem;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c3 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.625rem;
  padding-left: 0.625rem;
  display: block;
}

.c6 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c6 + p,
.c6 + small,
.c6 + h1,
.c6 + h2,
.c6 + label,
.c6 + h3,
.c6 + h4,
.c6 + h5,
.c6 + div,
.c6 + span {
  margin-top: 1.5rem;
}

.c12 {
  color: rgba(73,73,73,1);
  font-weight: 600;
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
  -webkit-text-fill-color: currentcolor;
  color: rgb(255,255,255);
}

.c12 + p,
.c12 + small,
.c12 + h1,
.c12 + h2,
.c12 + label,
.c12 + h3,
.c12 + h4,
.c12 + h5,
.c12 + div,
.c12 + span {
  margin-top: 0.75rem;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  display: block;
}

.c8 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
}

.c9 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  color: rgb(255,255,255);
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  z-index: 1;
  line-height: 1.5rem;
  height: auto;
  max-width: 100%;
  margin: -0.0625rem -0.0625rem 0 -0.0625rem;
}

.c9 button {
  margin-bottom: 0;
  margin-top: 0;
}

.c10 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  color: rgb(255,255,255);
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
  box-sizing: border-box;
  min-height: 2.9375rem;
  max-width: 100%;
  width: auto;
  height: auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  overflow: hidden;
  background-color: transparent;
  border-width: 0;
  box-shadow: none;
  color: inherit;
}

.c13 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-width: 0;
  margin-bottom: 0;
  background-color: transparent;
}

.c13 > [name='card']:not(:last-child) {
  margin-bottom: 0.8125rem;
}

.c13 > [name='card']:last-child {
  margin-bottom: 0.4375rem;
}

.c21 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  cursor: pointer;
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
}

.c22 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  cursor: pointer;
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  z-index: 1;
  line-height: 1.5rem;
  height: auto;
  max-width: 100%;
  margin: -0.0625rem -0.0625rem 0 -0.0625rem;
  margin: -0.0625rem;
  box-shadow: none;
}

.c22 button {
  margin-bottom: 0;
  margin-top: 0;
}

.c23 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  cursor: pointer;
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
  box-sizing: border-box;
  min-height: 2.9375rem;
  max-width: 100%;
  width: auto;
  height: auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  overflow: hidden;
  background-color: transparent;
  border-width: 0;
  box-shadow: none;
  color: inherit;
}

.c24 {
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  border-width: 0.0625rem;
  border-style: solid;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  color: rgba(73,73,73,1);
  background-color: rgb(255,255,255);
  border-color: rgb(216,216,216);
  min-height: auto;
  height: 2.875rem;
  -webkit-flex: 0 0 2.875rem;
  -ms-flex: 0 0 2.875rem;
  flex: 0 0 2.875rem;
  width: 2.875rem;
  min-width: 2.875rem;
  min-height: 2.875rem;
  max-width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: transparent;
  border-width: 0;
  border-radius: 0;
  box-shadow: none;
}

@media only screen and (min-width:48em) {
  .c0 {
    width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c0 {
    width: 56rem;
  }
}

@media only screen and (min-width:75em) {
  .c0 {
    width: 59rem;
  }
}

@media only screen and (max-width:47.9375rem) {
  .c0 {
    padding-left: 0.375rem;
    padding-right: 0.375rem;
  }
}

@media only screen and (min-width:0em) {
  .c3 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media only screen and (min-width:48em) {
  .c3 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <p
            className="c5"
          >
            Use predefined or customized fabric networks which can be public-facing or private. All fabrics are isolated from other customers giving you complete control over the network environment. Read more on fabrics.
             
            <a
              href="https://docs.joyent.com/public-cloud/network/sdn"
              target="__blank"
            >
              Read more
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
  <h3
    className="c6"
  >
    Networks attached to this instance
  </h3>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
          disabled={false}
          name="card"
        >
          <div
            className="c9"
            disabled={false}
            name="card-header"
          >
            <div
              className="c10"
              disabled={false}
              name="card-header-meta"
            >
              <div
                className="c11"
              >
                <h4
                  className="c12"
                >
                  name
                </h4>
              </div>
            </div>
          </div>
          <div
            className="c13"
            name="card-outlet"
          >
            <div
              className="c14"
            >
              <div
                className="c4"
              >
                <p
                  className="c5"
                >
                  description
                </p>
              </div>
              <div
                className="c15"
              >
                <div
                  className="c16"
                >
                  <div
                    className="c17"
                  >
                    <div
                      className="c18"
                    >
                      <div
                        className="c17"
                      >
                        <div
                          className="c19"
                        >
                          <svg
                            className=""
                            height="16"
                            innerRef={undefined}
                            style={
                              Object {
                                "transform": "rotate(0deg)",
                              }
                            }
                            viewBox="0 0 12 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M10,6V4A4,4,0,0,0,2,4V6H2A2,2,0,0,0,0,8v6a2,2,0,0,0,2,2h8a2,2,0,0,0,2-2V8A2,2,0,0,0,10,6ZM4,4c0-1.65.35-2,2-2s2,.35,2,2V6H4Zm6,9a1,1,0,0,1-1,1H3a1,1,0,0,1-1-1V9A1,1,0,0,1,3,8H9a1,1,0,0,1,1,1ZM6,13H6a1,1,0,0,1-1-1V10A1,1,0,0,1,6,9H6a1,1,0,0,1,1,1v2A1,1,0,0,1,6,13Z"
                              fill="rgba(73, 73, 73, 1)"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        className="c17"
                      >
                        <p
                          className="c5"
                        >
                          Private
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="c16"
                >
                  <div
                    className="c17"
                  >
                    <div
                      className="c18"
                    >
                      <div
                        className="c17"
                      >
                        <div
                          className="c19"
                        >
                          <svg
                            height="16.2"
                            viewBox="0 0 16.2 16.2"
                            width="16.2"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M16.2,6.61a17.42,17.42,0,0,0-3.37-.26,11.67,11.67,0,0,1-.47-4A15.72,15.72,0,0,1,16,2.59l.2-1a16,16,0,0,0-3.77-.24A11,11,0,0,1,12.59.2l-1-.2a14.09,14.09,0,0,0-.2,1.46A8.44,8.44,0,0,0,7.82,2.68c-.15.1-.31.19-.47.28A15.07,15.07,0,0,1,7.59.2l-1-.2a16.37,16.37,0,0,0-.26,3.37,11.66,11.66,0,0,1-4,.46A15.6,15.6,0,0,1,2.59.2l-1-.2a16.29,16.29,0,0,0-.25,3.77C.67,3.7.21,3.61.2,3.61l-.2,1c.07,0,.63.12,1.46.19a8.48,8.48,0,0,0,1.22,3.6A5.3,5.3,0,0,1,3,8.85,17.52,17.52,0,0,1,.2,8.61l-.2,1a16.66,16.66,0,0,0,3,.26h.4a11.71,11.71,0,0,1,.46,4A17,17,0,0,1,.2,13.61l-.2,1a16.66,16.66,0,0,0,3,.26l.8,0c-.07.7-.16,1.16-.16,1.17l1,.2c0-.07.12-.63.19-1.46a8.49,8.49,0,0,0,3.6-1.23c.15-.1.3-.18.46-.27A16.88,16.88,0,0,1,8.61,16l1,.2a17,17,0,0,0,.25-3.37,11.73,11.73,0,0,1,4-.47A17.13,17.13,0,0,1,13.61,16l1,.2a17.28,17.28,0,0,0,.24-3.77,11,11,0,0,1,1.17.16l.2-1a14.09,14.09,0,0,0-1.46-.2,8.45,8.45,0,0,0-1.23-3.59c-.1-.15-.18-.31-.27-.47A15.07,15.07,0,0,1,16,7.59ZM8.38,3.51a7.26,7.26,0,0,1,3-1,13.17,13.17,0,0,0,.44,3.93,9.35,9.35,0,0,0-3.51,1A8.4,8.4,0,0,1,7.39,4,6.75,6.75,0,0,0,8.38,3.51ZM2.48,4.84H3a12.4,12.4,0,0,0,3.44-.44,9.35,9.35,0,0,0,1,3.51A8.38,8.38,0,0,1,4,8.8a6.18,6.18,0,0,0-.53-1A7.36,7.36,0,0,1,2.48,4.84Zm5.34,7.84a7.22,7.22,0,0,1-3,1A12.61,12.61,0,0,0,4.4,9.78a9,9,0,0,0,3.52-1,8.43,8.43,0,0,1,.88,3.37A7.11,7.11,0,0,0,7.82,12.68Zm5.9-1.33a13.23,13.23,0,0,0-3.94.44,9,9,0,0,0-1-3.51,8.44,8.44,0,0,1,3.38-.89,6.69,6.69,0,0,0,.52,1A7.13,7.13,0,0,1,13.72,11.35Z"
                              fill="rgba(73, 73, 73, 1)"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        className="c17"
                      >
                        <p
                          className="c5"
                        >
                          Fabric network
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="c16"
                >
                  <div
                    className="c17"
                  >
                    <div
                      className="c18"
                    >
                      <div
                        className="c17"
                      >
                        <div
                          className="c19"
                        >
                          <svg
                            className=""
                            height="17"
                            innerRef={undefined}
                            style={
                              Object {
                                "transform": "rotate(0deg)",
                              }
                            }
                            version="1.1"
                            viewBox="0 0 17 17"
                            width="17"
                            xmlns="http://www.w3.org/2000/svg"
                            xmlnsXlink="http://www.w3.org/1999/xlink"
                          >
                            <g
                              transform="translate(-1105 974)"
                            >
                              <g>
                                <g>
                                  <use
                                    fill="rgba(73, 73, 73, 1)"
                                    transform="translate(1105 -974)"
                                    xlinkHref="#c"
                                  />
                                </g>
                                <g>
                                  <use
                                    fill="rgba(73, 73, 73, 1)"
                                    transform="translate(1111 -974)"
                                    xlinkHref="#c"
                                  />
                                </g>
                                <g>
                                  <use
                                    fill="rgba(73, 73, 73, 1)"
                                    transform="translate(1117 -974)"
                                    xlinkHref="#c"
                                  />
                                </g>
                                <g>
                                  <use
                                    fill="rgba(73, 73, 73, 1)"
                                    transform="translate(1105 -968)"
                                    xlinkHref="#c"
                                  />
                                </g>
                                <g>
                                  <g>
                                    <use
                                      fill="rgba(73, 73, 73, 1)"
                                      transform="translate(1111 -968)"
                                      xlinkHref="#d"
                                    />
                                  </g>
                                </g>
                                <g>
                                  <g>
                                    <use
                                      fill="rgba(73, 73, 73, 1)"
                                      transform="translate(1117 -968)"
                                      xlinkHref="#d"
                                    />
                                  </g>
                                </g>
                                <g>
                                  <g>
                                    <use
                                      fill="rgba(73, 73, 73, 1)"
                                      transform="translate(1105 -962)"
                                      xlinkHref="#d"
                                    />
                                  </g>
                                </g>
                                <g>
                                  <g>
                                    <use
                                      fill="rgba(73, 73, 73, 1)"
                                      transform="translate(1111 -962)"
                                      xlinkHref="#d"
                                    />
                                  </g>
                                </g>
                                <g>
                                  <g>
                                    <use
                                      fill="rgba(73, 73, 73, 1)"
                                      transform="translate(1117 -962)"
                                      xlinkHref="#d"
                                    />
                                  </g>
                                </g>
                              </g>
                            </g>
                            <defs>
                              <path
                                d="M 2.5 5C 3.88071 5 5 3.88071 5 2.5C 5 1.11929 3.88071 0 2.5 0C 1.11929 0 0 1.11929 0 2.5C 0 3.88071 1.11929 5 2.5 5Z"
                                id="c"
                              />
                              <path
                                d="M 2.5 1C 3.3 1 4 1.7 4 2.5C 4 3.3 3.3 4 2.5 4C 1.7 4 1 3.3 1 2.5C 1 1.7 1.7 1 2.5 1ZM 2.5 0C 1.1 0 0 1.1 0 2.5C 0 3.9 1.1 5 2.5 5C 3.9 5 5 3.9 5 2.5C 5 1.1 3.9 0 2.5 0Z"
                                id="d"
                              />
                            </defs>
                          </svg>
                        </div>
                      </div>
                      <div
                        className="c17"
                      >
                        <p
                          className="c5"
                        >
                          2 instances
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="c20"
              >
                <div
                  className="c21"
                  disabled={false}
                  name="card"
                >
                  <div
                    className="c22"
                    disabled={false}
                    name="card-header"
                    onClick={[Function]}
                  >
                    <div
                      className="c23"
                      disabled={false}
                      name="card-header-meta"
                    >
                      <div
                        className="c11"
                      >
                        <p
                          className="c5"
                        >
                          Network information
                        </p>
                      </div>
                    </div>
                    <div
                      className="c24"
                      disabled={false}
                      name="card-header-box"
                    >
                      <svg
                        className=""
                        height="6"
                        innerRef={undefined}
                        style={
                          Object {
                            "transform": "rotate(0deg)",
                          }
                        }
                        viewBox="0 0 9.6 6"
                        width="9.6"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
                          fill="rgba(73, 73, 73, 1)"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="c20"
              >
                <div
                  className="c21"
                  disabled={false}
                  name="card"
                >
                  <div
                    className="c22"
                    disabled={false}
                    name="card-header"
                    onClick={[Function]}
                  >
                    <div
                      className="c23"
                      disabled={false}
                      name="card-header-meta"
                    >
                      <div
                        className="c11"
                      >
                        <p
                          className="c5"
                        >
                          Instances on network
                        </p>
                      </div>
                    </div>
                    <div
                      className="c24"
                      disabled={false}
                      name="card-header-box"
                    >
                      <svg
                        className=""
                        height="6"
                        innerRef={undefined}
                        style={
                          Object {
                            "transform": "rotate(0deg)",
                          }
                        }
                        viewBox="0 0 9.6 6"
                        width="9.6"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M9.6,1.12,8.24,0,4.8,3.5,1.36,0,0,1.12,4.8,6Z"
                          fill="rgba(73, 73, 73, 1)"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
          disabled={false}
          name="card"
        >
          <div
            className="c9"
            disabled={false}
            name="card-header"
          >
            <div
              className="c10"
              disabled={false}
              name="card-header-meta"
            >
              <div
                className="c11"
              >
                <h4
                  className="c12"
                >
                  name2
                </h4>
              </div>
            </div>
          </div>
          <div
            className="c13"
            name="card-outlet"
          >
            <div
              className="c14"
            >
              <div
                className="c4"
              >
                <p
                  className="c5"
                >
                  description2
                </p>
              </div>
              <div
                className="c15"
              >
                <div
                  className="c16"
                >
                  <div
                    className="c17"
                  >
                    <div
                      className="c18"
                    >
                      <div
                        className="c17"
                      >
                        <div
                          className="c19"
                        >
                          <svg
                            className=""
                            height="16"
                            innerRef={undefined}
                            style={
                              Object {
                                "transform": "rotate(0deg)",
                              }
                            }
                            viewBox="0 0 12 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M10,6V4A4,4,0,0,0,2,4V6H2A2,2,0,0,0,0,8v6a2,2,0,0,0,2,2h8a2,2,0,0,0,2-2V8A2,2,0,0,0,10,6ZM4,4c0-1.65.35-2,2-2s2,.35,2,2V6H4Zm6,9a1,1,0,0,1-1,1H3a1,1,0,0,1-1-1V9A1,1,0,0,1,3,8H9a1,1,0,0,1,1,1ZM6,13H6a1,1,0,0,1-1-1V10A1,1,0,0,1,6,9H6a1,1,0,0,1,1,1v2A1,1,0,0,1,6,13Z"
                              fill="rgba(73, 73, 73, 1)"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        className="c17"
                      >
                        <p
                          className="c5"
                        >
                          Private
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="c16"
                >
                  <div
                    className="c17"
                  >
                    <div
                      className="c18"
                    >
                      <div
                        className="c17"
                      >
                        <div
                          className="c19"
                        >
                          <svg
                            height="13"
                            viewBox="0 0 9 13"
                            width="9"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M0,0V13H9V0ZM7,11H2V2H7ZM3,4H6V3H3ZM3,6H6V5H3ZM3,8H6V7H3Z"
                              fill="rgba(73, 73, 73, 1)"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        className="c17"
                      >
                        <p
                          className="c5"
                        >
                          Data center network
                        </p>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
